--- a/index.html
+++ b/index.html
@@ -341,14 +341,14 @@
   font-family: 'Times New Roman', serif;
   border-top: 2px solid #FFD700;
 ">
-  <h2 style="color: #FFD700; font-size: 2em; text-align: center; margin-bottom: 25px;">
+  <h2 style="color: #FFD700; font-size: 1.5em; text-align: center; margin-bottom: 25px;">
     Beneficios del juego "El Termómetro de las Emociones"
   </h2>
   <ul style="
     list-style: none;
     padding-left: 0;
-    font-size: 1.1em;
-    line-height: 1.5;
+    font-size: 0.9em;
+    line-height: 0.9;
     text-align: justify;
   ">
     <li><strong>🧠 Fortalece la inteligencia emocional:</strong> Facilita la identificación, clasificación y comprensión de emociones básicas y complejas en una experiencia lúdica e interactiva.</li><br>
@@ -358,7 +358,7 @@
     <li><strong>🧩 Integra emoción, juego y tecnología:</strong> La interfaz visual y el componente interactivo despiertan interés, participación y comprensión profunda.</li><br>
     <li><strong>📈 Ofrece retroalimentación positiva:</strong> El termómetro emocional refleja el progreso, incentivando la motivación y el desarrollo emocional continuo.</li>
   </ul>
-  <p style="margin-top: 25px; font-size: 1em; color: #ccc; text-align: justify;">
+  <p style="margin-top: 25px; font-size: 0.8em; color: #FFD700; text-align: justify;">
     Este juego convierte la exploración emocional en una experiencia educativa significativa, combinando tecnología, reflexión y creatividad. Ideal para espacios escolares, terapéuticos y familiares. 💛
   </p>
 </section>
@@ -370,9 +370,9 @@
   text-align: center;
   padding: 25px 15px;
   font-family: 'Arial', sans-serif;
-  font-size: 1em;
+  font-size: 0.8em;
   border-top: 2px solid #FFD700;
-  line-height: 1.4;
+  line-height: 1;
 ">
   <p style="margin: 5px 0;">🌟 Parte del proyecto creativo en evolución <strong style="color: #fff;">“Emociones en el Aula”</strong></p>
   <p style="margin: 5px 0;">🔧 Este proyecto se mejora constantemente con nuevas herramientas y experiencias reales.</p>
